fixed broken css

--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,6 @@
 .topnav {
   background-color: #131975;
   background-image: url("file:///Users/riannemccartney/Downloads/snakebnb.png")
-  display: inline;
   overflow: hidden;
 }
 
